--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Informatikai rendszer- és alkalmazásüzemeltető technikus</title>
+  <link rel="stylesheet" href="main.css" />
 </head>
   <body>
     <h1>Informatikai rendszer- és alkalmazásüzemeltető technikus</h1>
