--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
   <body>
     <h1>Informatikai rendszer- és alkalmazásüzemeltető technikus</h1>
 
-    <a href="ieta1.html" target=_blank>Informatikai és távközlési alapok 1</a>
-    <a href="ieta2.html" target=_blank>Informatikai és távközlési alapok 2</a>
-    <a href="prog.html" target=_blank>Programozás</a>
-    <a href="weboldalak.html" target=_blank>Weboldalak kódolása</a>
-    <a href="adatbazis.html" target=_blank>Adatbázis-kezelés</a>
+    <a href="pdf.html">PDF</a>
 
-    <a href="halo1.html" target=_blank>Hálózatok 1</a>
-    <a href="halo2.html" target=_blank>Hálózatok 2</a>
-    <a href="szerverfelho.html" target=_blank>Szerverek és felhőszolgáltatások</a>
-    <a href="haloprogiot.html" target=_blank>Hálózat programozása és IoT</a>
+    <a href="ieta1.html">Informatikai és távközlési alapok 1</a>
+    <a href="ieta2.html">Informatikai és távközlési alapok 2</a>
+    <a href="prog.html">Programozás</a>
+    <a href="weboldalak.html">Weboldalak kódolása</a>
+    <a href="adatbazis.html">Adatbázis-kezelés</a>
 
-    <a href="iktprojekt1.html" target=_blank>IKT projektmunka 1</a>
-    <a href="iktprojekt2.html" target=_blank>IKT projektmunka 2</a>
+    <a href="halo1.html">Hálózatok 1</a>
+    <a href="halo2.html">Hálózatok 2</a>
+    <a href="szerverfelho.html">Szerverek és felhőszolgáltatások</a>
+    <a href="haloprogiot.html">Hálózat programozása és IoT</a>
 
-    <a href="munkavi.html" target=_blank>Munkavállalói ismeretek</a>
-    <a href="munkavsziny.html" target=_blank>Munkavállalói idegen nyelv</a>
-    <a href="szakangol.html" target=_blank>Szakmai angol</a>
+    <a href="iktprojekt1.html">IKT projektmunka 1</a>
+    <a href="iktprojekt2.html">IKT projektmunka 2</a>
+
+    <a href="munkavi.html">Munkavállalói ismeretek</a>
+    <a href="munkavsziny.html">Munkavállalói idegen nyelv</a>
+    <a href="szakangol.html">Szakmai angol</a>
   </body>
 </html>
