--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <a href="munkavi.html">Munkavállalói ismeretek</a>
     <a href="munkavsziny.html">Munkavállalói idegen nyelv</a>
     <a href="szakangol.html">Szakmai angol</a>
+    <a href="https://drive.google.com/file/d/1OgSP3ObD55Jdnie8COtO3kpapwyUHKe0/view?usp=sharing" target=_blank>Képzési és kimeneti követelmények</a>
   </body>
 </html>
