--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
 
     <a href="pdf.html">PDF</a>
 
+    <a href="munkavi.html">Munkavállalói ismeretek</a>
+    <a href="munkavsziny.html">Munkavállalói idegen nyelv</a>
+
     <a href="ieta1.html">Informatikai és távközlési alapok 1</a>
     <a href="ieta2.html">Informatikai és távközlési alapok 2</a>
-    <a href="prog.html">Programozás</a>
-    <a href="weboldalak.html">Weboldalak kódolása</a>
-    <a href="adatbazis.html">Adatbázis-kezelés</a>
 
-    <a href="halo1.html">Hálózatok 1</a>
-    <a href="halo2.html">Hálózatok 2</a>
-    <a href="szerverfelho.html">Szerverek és felhőszolgáltatások</a>
-    <a href="haloprogiot.html">Hálózat programozása és IoT</a>
+    <a href="prog.html">Programozási alapok</a>
+    <a href="weboldalak.html">Weboldalak kódolása</a>
 
     <a href="iktprojekt1.html">IKT projektmunka 1</a>
     <a href="iktprojekt2.html">IKT projektmunka 2</a>
 
-    <a href="munkavi.html">Munkavállalói ismeretek</a>
-    <a href="munkavsziny.html">Munkavállalói idegen nyelv</a>
+    <a href="halo1.html">Hálózatok 1</a>
+    <a href="halo2.html">Hálózatok 2</a>
+    <a href="haloprogiot.html">Hálózat programozása és IoT</a>
+
+    <a href="szerverfelho.html">Szerverek és felhőszolgáltatások</a>
+
+    <a href="adatbazis.html">Adatbázis-kezelés</a>
+
     <a href="szakangol.html">Szakmai angol</a>
+
     <a href="https://drive.google.com/file/d/1OgSP3ObD55Jdnie8COtO3kpapwyUHKe0/view?usp=sharing" target=_blank>Képzési és kimeneti követelmények</a>
   </body>
 </html>
