--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Informatikai rendszer- és alkalmazásüzemeltető technikus</h1>
 
-    <a href="pdf.html">PDF</a>
+    <a href="pdf.html">PROGRAMTANTERV</a>
 
     <a href="munkavi.html">Munkavállalói ismeretek</a>
     <a href="munkavsziny.html">Munkavállalói idegen nyelv</a>
